# Calculator

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
include/: Divide.hpp  ErrorHandler.hpp  INode.hpp  Multipl.hpp  Parser.hpp  Substr.hpp  Sum.hpp  Utils.hpp  Value.hpp  Variable.hpp  VariableInputer.hpp
src/: Divide.cpp  ErrorHandler.cpp  Multipl.cpp  Parser.cpp  Substr.cpp  Sum.cpp  Utils.cpp  Value.cpp  Variable.cpp  VariableInputer.cpp  main.cpp
tests/: TestDivide.cpp  TestErrorHandler.cpp  TestMultipl.cpp  TestParser.cpp  TestSubstr.cpp  TestSum.cpp  TestVariable.cpp  test.cpp
